--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,26 @@
+html {
+  color: #333;
+  padding: 1rem;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+* + * {
+  margin-top: 0.8rem;
+}
+
 form {
   display: flex;
   flex-direction: column;
+  margin-top: 1.2rem;
+}
+
+input[type='text'] {
+  border: 1px solid #aaa;
+  padding: 8px;
+  outline: none;
+  transition: 0.3s;
 }
